# ChangeLog for sys-kernel/dracut
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  22 Sep 2011; Amadeusz Żołnowski <aidecoe@gentoo.org> dracut-9999.ebuild:
  Changed git.kernel.org URL temporary to upstream's mirror for kernel.org
  down-time.

  07 Sep 2011; Amadeusz Żołnowski <aidecoe@gentoo.org> dracut-9999.ebuild:
  Synced with sys-kernel/dracut-013 in Portage tree.

  10 Aug 2011; Amadeusz Żołnowski <aidecoe@gentoo.org> dracut-9999.ebuild:
  Updated to changes after 011 release:
  - adding/removing modules
  - repo has been moved from sf.net to kernel.org

  Moreover ebuild has been migrated to git-2 eclass.

  07 Mar 2011; Amadeusz Żołnowski <aidecoe@gentoo.org> dracut-9999.ebuild,
  +files/dracut-9999-multipath-udev-rules.patch, metadata.xml:
  Updated according to changes in dracut-008-r1 in the main tree. Getting
  source from original dracut repo, branch - master.

  11 Sep 2010; Amadeusz Żołnowski <aidecoe@aidecoe.name> dracut-9999.ebuild:
  Depend on >=baselayout-1.12.13-r1 (only in my overlay at this time).  System
  won't boot with earlier because Dracut mounts devpts and <=baselayout-1.12.13
  doesn't check if it's already mounted.

  Moreover removed unnecessary version specifications for dependencies.  Only
  mandatory are left.

  10 Sep 2010; Amadeusz Żołnowski <aidecoe@aidecoe.name> -dracut-006-r2.ebuild,
  -dracut-007-r1.ebuild, -files/dracut-006-console_init-not-necessary.patch,
  -files/dracut-006-dhcp6.patch, -files/dracut-006-dm-udev-rules.patch,
  -files/dracut-006-lc-all-c.patch, -files/dracut-007-dm-udev-rules.patch,
  -files/dracut-007-multipath-udev-rules.patch:
  Removed ebuilds (with corresponding patches) already committed to Portage
  tree.  dracut-006-r2 is committed as dracut-006-r1 and dracut-007-r1 is
  committed as dracut-007.

  10 Sep 2010; Amadeusz Żołnowski <aidecoe@aidecoe.name> dracut-9999.ebuild:
  Latest changes in dracut-007-r1 ported to dracut-9999. Moreover it closes